hero fixed on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,10 +52,6 @@ nav {
   z-index: 5;
 }
 
-.hero-call h1 {
-  margin-bottom: 100px;
-}
-
 .hero-call i {
   margin: 0 10px;
 }
@@ -70,7 +66,6 @@ nav {
   margin-bottom: 50px;
 }
 
-
 .cards-index .index-img {
   object-fit: cover;
 }
@@ -84,7 +79,6 @@ nav {
   text-align: center;
 }
 
- 
 /* --------------------------------------------------- About Paddy */
 
 .aboutpaddy {
@@ -122,7 +116,6 @@ nav {
   font-weight: 700;
 }
 
-
 /*-------------------------------- cards section*/
 
 #message h3 {
@@ -139,7 +132,6 @@ nav {
   margin-bottom: 50px;
   margin-top: 50px;
 }
-
 
 /* --------------------------------------------------- Send Card Selected */
 
@@ -172,16 +164,16 @@ nav {
 }
 
 .card-center {
-  display:flex;
+  display: flex;
   justify-content: center;
   margin: 30px 0 20px 0;
 }
 
 .greenspan {
-    color: #008000;
-    font-family: 'Marck Script', cursive;
-    font-weight: 600;
-    font-size: 1.8rem;  
+  color: #008000;
+  font-family: 'Marck Script', cursive;
+  font-weight: 600;
+  font-size: 1.8rem;
 }
 
 .sendmsg-img {
@@ -204,25 +196,24 @@ nav {
   font-size: 1.5em;
 }
 
-
 /* Materialize Forms styling changes */
 
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
   color: #2da32d;
 }
-::-moz-placeholder { /* Firefox 19+ */
-  color:  #2da32d;
-}
-:-ms-input-placeholder { /* IE 10+ */
-  color:  #2da32d;
-}
-:-moz-placeholder { /* Firefox 18- */
+::-moz-placeholder {
+  /* Firefox 19+ */
   color: #2da32d;
 }
-
-
-
-
+:-ms-input-placeholder {
+  /* IE 10+ */
+  color: #2da32d;
+}
+:-moz-placeholder {
+  /* Firefox 18- */
+  color: #2da32d;
+}
 
 /* --------------------------------------------------- Footer */
 footer .copyright {
@@ -230,11 +221,10 @@ footer .copyright {
 }
 /* --------------------------------------------------- Media Queries */
 
-@media screen and (max-width:787px) {
-
+@media screen and (max-width: 787px) {
   .hero-call {
     left: 8%;
-    margin-top: 120px;
+    margin-top: 50px;
     z-index: 5;
   }
 
@@ -244,7 +234,7 @@ footer .copyright {
 
   .head-title h1 {
     font-weight: 500;
-    font-size: 4em;
+    font-size: 3em;
   }
 
   .head-title h3 {
@@ -261,7 +251,6 @@ footer .copyright {
     font-size: 1.2em;
   }
   .head-title i {
-    font-size: 1em;   
+    font-size: 1em;
   }
-
 }
